[dbwriter examples] some typos fixed
Well, the examples still need some overhaul...

--- a/example_confs/dbwriter/solarpowerlog-custom.conf
+++ b/example_confs/dbwriter/solarpowerlog-custom.conf
@@ -5,11 +5,7 @@
 # see http://cppcms.com/sql/cppdb/backendref.html
 # and http://cppcms.com/sql/cppdb/connstr.html.
 
-# NOTE: This snippet is designed to beincluded and it has to be included
-# within the logger section.
-
-# WARNING: I did not test this snippet -- it shows only the configuration options
-# I coded into solarpowerlog. Feedback if it works or not is appreciated.
+# NOTE: This snippet is designed to be included in the logger section.
 
 # Example use:
 
@@ -34,8 +30,8 @@ logger:
 # Ok here we go...
 
     ### Custom DB Backend Bridge
-    # This backend is special, because you will completly need to provide
-    # the CppDB cnnection string.
+    # This backend is special, because you will completely need to provide
+    # the CppDB connection string.
     # http://cppcms.com/sql/cppdb/connstr.html
     db_type="custom";
     # Example:
