--- a/example_confs/dbwriter/solarpowerlog-postgresql.conf
+++ b/example_confs/dbwriter/solarpowerlog-postgresql.conf
@@ -5,8 +5,7 @@
 # see http://cppcms.com/sql/cppdb/backendref.html
 # and http://cppcms.com/sql/cppdb/connstr.html.
 
-# NOTE: This snippet is designed to beincluded and it has to be included
-# within the logger section.
+# NOTE: This snippet is designed to be included in the logger section.
 
 # WARNING: I did not test this snippet -- it shows only the configuration options
 # I coded into solarpowerlog. Feedback if it works or not is appreciated.
