--- a/example_confs/dbwriter/solarpowerlog.conf
+++ b/example_confs/dbwriter/solarpowerlog.conf
@@ -57,21 +57,21 @@ logger:
                 # Currently REQUIRED (but might be changed later.)
                 db_logevery=5.0;
 
-                # Should we only log if actually *something* changed
+                # (optional) Should we only log if actually *something* changed
                 # If set to "true" the logger will only write to the
                 # database if actual data changed (might reduce db size)
-                # (note: to determine if smth has changed only data from the
-                # inverter is considered -- not e.g %TIMESTAMP or like.
+                # (note: to determine if something has changed only data from 
+                # the inverter is considered -- not e.g %TIMESTAMP or like.
                 # this defaults to "false"
                 # db_logchangedonly=false;
 
-                # Sparse datas are datsets which are only partial available.
+                # (optional) Sparse data are data sets which are only partially
+                # available.
                 # When true, this option allows to log data even if only
-                # a subset is available
+                # a subset of the data is available
                 # If this this is false, solarpowerlog will not log anything
                 # unless it has got all the data. (default)
                 # db_allowsparse=false;
-
 
                 # (REQUIRED) The table to be used for this job
                 db_table="mytable";
@@ -102,7 +102,7 @@ logger:
                 # (REQUIRED)  specifies some principle operational mode
                 # (note: selectors are explained later)
                 # for the DB-Writer. Options are:
-                # continous
+                # continuous
                 #   like CVS, just logging everything to one big
                 #   table. You maybe want a %TIMESTAMP.
                 #   $Selektors are not available.
@@ -113,11 +113,11 @@ logger:
                 #   row.
                 # cumulative
                 #    log day/month/year/hourly data. This something between
-                #    continous/sinlge:
+                #    continuous/sinlge:
                 #    It will update a row instead of adding a new row, but
                 #    add new rows if there was no row to be udated.
                 #    To select the right row all %modifiers are used as
-                #    selectors. To have the possiblity to only use a sub-set
+                #    selectors. To have the possibility to only use a sub-set
                 #    of those %-types, only the ones starting with "!" will be
                 #    considered as selectors.
                 #    You can of course also use static "$" selectors like in
@@ -137,7 +137,7 @@ logger:
 
                 # Selectors
                 # In the single and cumulative modes, solarpowerlog needs to
-                # update the data and make decissions which rows it needs to
+                # update the data and make decisions which rows it needs to
                 # update.
                 # For this the selectors are used.
                 # Selectors can be recognized by a "$" or "!" as the first
@@ -158,7 +158,7 @@ logger:
                 # the inverters' capability.
                 # Also you can use the special keywords and (in single and
                 # cumulative mode) the selectors.
-                # The following cumulative example logs only the curernt power
+                # The following cumulative example logs only the current power
                 # along with the timestamp. The timestamp goes to the column
                 # "created" and the feeding power to the column "pac"
                 db_layout = (
