--- a/example_confs/dbwriter/solarpowerlog_cumulative.conf
+++ b/example_confs/dbwriter/solarpowerlog_cumulative.conf
@@ -1,6 +1,6 @@
 # This example-snippet shows how to use the DB Writer in cumulative mode.
-# it only focues on this part, all unrelated options are NOT shown.
-# this snipped goes into the db_jobs list.
+# it only focuses on this part, all unrelated options are NOT shown.
+# this snippet goes into the db_jobs list.
 
 # Example 1
 /*
@@ -29,11 +29,11 @@
 
 # Example 2
 /*
-# To demonstrate a selektor, here's a modified example from above.
+# To demonstrate a selector, here's a modified example from above.
 # In this setup, the table contains data for more than one Inverter,
 # so solarpowerlog must ensure only to update e.g Inverter1's data.
 
-# We want the table to contain this data, for exampe
+# We want the table to contain this data, for example
 # Inverter  | Year | Month | Day | Today_Produced
 #==================================================
 # Inverter1 | 2014 |  07   |  01 | 10.2
