--- a/example_confs/dbwriter/solarpowerlog_single.conf
+++ b/example_confs/dbwriter/solarpowerlog_single.conf
@@ -1,19 +1,18 @@
 # This example-snippet shows how to use the DB Writer in single mode.
-# it only focues on this part, all unrelated options are NOT shown.
-# this snipped goes into the db_jobs list.
+# it only focuses on this part, all unrelated options are NOT shown.
+# this snippet goes into the db_jobs list.
 
-# The snipped below will setup logging so that a single row will be
-# continously updated with the latest value.
+# The snippet below will setup logging so that a single row will be
+# continuously updated with the latest value.
 # This can be for example used to generated an overview / snapshot of the
-# current data when history is not neccessary.
+# current data when history is not necessary.
 # The example below will log to the database the current power along
 # with the timestamp, overwriting the values with every update.
 
-# Note: In single mode, only "$" selektors can be used. "!" type selektors
+# Note: In single mode, only "$" selectors can be used. "!" type selectors
 # work only in cumulative mode.
 
     db_operation_mode="single";
-
 
     db_layout = (
     #   [  "Capability/Keyword" , "column" ],
