[misc] s/manufactor/manufacturer within project.
Note: manufactor as config entry is now depreciated in favour of
manufacturer. Sorry for the ugly typo...

--- a/example_confs/dbwriter/solarpowerlog.conf
+++ b/example_confs/dbwriter/solarpowerlog.conf
@@ -22,7 +22,7 @@ inverter :
         name   = "Simulator";
         dbglevel =  "ERROR";
         description = "Sample Inverter for the DB Example";
-        manufactor =  "SPUTNIK_ENGINEERING";
+        manufacturer =  "SPUTNIK_ENGINEERING";
         model ="S-Series";
         comms = "TCP/IP";
         tcpport = "12345";
