--- a/example_confs/solarpowerlog_complex.conf
+++ b/example_confs/solarpowerlog_complex.conf
@@ -20,7 +20,7 @@ inverter :
     {
       name   = "Inverter_1";
       description = "A Inverter inverting";
-      manufactor =  "SPUTNIK_ENGINEERING";
+      manufacturer =  "SPUTNIK_ENGINEERING";
       model ="S-Series";
 
       comms = "TCP/IP";
@@ -36,7 +36,7 @@ inverter :
     {
       name   = "Inverter_2";
       description = "A Inverter inverting";
-      manufactor =  "SPUTNIK_ENGINEERING";
+      manufacturer =  "SPUTNIK_ENGINEERING";
       model ="S-Series";
 
       comms =  "TCP/IP";
@@ -52,7 +52,7 @@ inverter :
     {
       name   = "Inverter_3";
       description = "A Inverter inverting";
-      manufactor =  "SPUTNIK_ENGINEERING";
+      manufacturer =  "SPUTNIK_ENGINEERING";
       model ="S-Series";
 
       comms =  "TCP/IP";
