Travis-CI: Debug config

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ compiler:
 script: ./bootstrap.sh && ./configure && .make
 
 before_install:
-  - curl http://ftp-master.debian.org/keys/archive-key-8.asc | sudo apt-key add -
+  - curl https://ftp-master.debian.org/keys/archive-key-7.0.asc | apt-key add -
   - sudo apt-add-apt-repository -y "deb http://ftp.de.debian.org/debian/ sid main contrib non-free"
   - sudo apt-get update -qq
   - sudo apt-get -qq build-deps solarpowerlog
