--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,6 @@ before_install:
   - curl https://ftp-master.debian.org/keys/archive-key-7.0.asc | sudo apt-key add -
   - sudo add-apt-repository -y "deb http://ftp.de.debian.org/debian/ sid main contrib non-free"
   - sudo apt-get update -qq
-  - sudo apt-get -qq build-deps solarpowerlog
+  - sudo apt-get -qq build-dep solarpowerlog
   - sudo apt-get install -qq libcppdb-dev
 
