--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,8 @@ compiler:
 script: ./bootstrap.sh && ./configure && .make
 
 before_install:
-  - curl https://ftp-master.debian.org/keys/archive-key-7.0.asc | sudo apt-key add -
-  - sudo add-apt-repository -y "deb http://ftp.de.debian.org/debian/ sid main contrib non-free"
+#  - curl https://ftp-master.debian.org/keys/archive-key-7.0.asc | sudo apt-key add -
+#  - sudo add-apt-repository -y "deb http://ftp.de.debian.org/debian/ sid main contrib non-free"
   - sudo apt-get update -qq
   - sudo apt-get -qq build-dep solarpowerlog
   - sudo apt-get install -qq libcppdb-dev
