--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ compiler:
   - gcc
   - clang
 
-script: ./bootstrap.sh && ./configure && .make
+script: ./bootstrap.sh && ./configure && make -j2
 
 before_install:
 #  - curl https://ftp-master.debian.org/keys/archive-key-7.0.asc | sudo apt-key add -
