[example-confs] Add missing parameter in dbwriter example configuration

--- a/example_confs/dbwriter/solarpowerlog.conf
+++ b/example_confs/dbwriter/solarpowerlog.conf
@@ -25,7 +25,8 @@ inverter :
         manufacturer =  "SPUTNIK_ENGINEERING";
         model ="S-Series";
         comms = "TCP/IP";
-        tcpport = "12345";
+        tcpadr = "127.0.0.1";
+	tcpport = "12345";
         tcptimeout = 5000;
         commadr = 1;
     }
